# acquire-core-libs

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: nightly-release.yml  nightly-tag.yml  release.yml  test_pr.yml
src/: CMakeLists.txt
src/acquire-core-logger/: CMakeLists.txt  README.md
src/acquire-core-platform/: CMakeLists.txt  README.md
src/acquire-core-platform/linux/: CMakeLists.txt  platform.c
src/acquire-core-platform/osx/: CMakeLists.txt  platform.c
src/acquire-core-platform/src/: CMakeLists.txt
src/acquire-core-platform/src/linux/: CMakeLists.txt
src/acquire-core-platform/src/osx/: CMakeLists.txt
src/acquire-core-platform/src/win32/: CMakeLists.txt
src/acquire-core-platform/win32/: CMakeLists.txt  platform.c
src/acquire-device-hal/: CMakeLists.txt  README.md
src/acquire-device-hal/device/hal/: device.manager.cpp  loader.c  storage.c  storage.h
src/acquire-device-hal/src/: CMakeLists.txt
src/acquire-device-hal/src/device/hal/: camera.c  device.manager.cpp  storage.c
src/acquire-device-hal/src/device/hal/experimental/: stage.axis.c
src/acquire-device-kit/: CMakeLists.txt  README.md
src/acquire-device-kit/device/kit/: driver.h  storage.h
src/acquire-device-kit/src/: CMakeLists.txt
src/acquire-device-properties/: CMakeLists.txt  README.md
src/acquire-device-properties/device/props/: components.c  components.h  storage.c  storage.h
src/acquire-device-properties/src/: CMakeLists.txt
src/acquire-device-properties/src/device/props/: components.h
tests/: CMakeLists.txt  file-create-behavior.cpp  instance-types.cpp  unit-tests.cpp
